Fixed overflow for code part

--- a/B1502CBA/style.css
+++ b/B1502CBA/style.css
@@ -191,4 +191,5 @@ pre {
 	color: white;
 	font-size: 90%;
 	padding: 10pt;
+	overflow: scroll;
 }
